main/default/objects/ServiceAgreement_Junction__c/fields/Component_Id__c.field-meta.xml
<CustomField>
    <fullName>Component_Id__c</fullName>
    <label>Component_Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>