main/default/objects/ServiceAgreement_Junction__c/fields/Sales_Service_Agreement_Text__c.field-meta.xml
<CustomField>
    <fullName>Sales_Service_Agreement_Text__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Service Agreement Text</label>
    <referenceTo>Sales_Service_Agreement_Text__c</referenceTo>
    <relationshipLabel>ServiceAgreement_Junctions</relationshipLabel>
    <relationshipName>ServiceAgreement_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>