main/default/objects/ServiceAgreement_Junction__c/fields/SFDCSalesProductRatePlan__c.field-meta.xml
<CustomField>
    <fullName>SFDCSalesProductRatePlan__c</fullName>
    <label>SFDCSalesProductRatePlan</label>
    <length>18</length>
    <type>Text</type>
</CustomField>