main/default/objects/ServiceAgreement_Junction__c/listViews/Collaboration_and_Messaging.listView-meta.xml
<ListView>
    <fullName>Collaboration_and_Messaging</fullName>
    <columns>NAME</columns>
    <columns>Component_Id__c</columns>
    <columns>Sales_Product_Component_Id__c</columns>
    <columns>Sales_Service_Agreement_Text__c</columns>
    <columns>SFDCSalesProductRatePlan__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Collaboration</value>
    </filters>
    <label>Collaboration and Messaging</label>
</ListView>